--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1" />
+    <!-- 移动端布局，还需要改动。 -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <!-- 删除苹果工具栏等 -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>vue动漫社</title>
     <link rel="stylesheet" type="text/css" href="static/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="static/css/iconfont.css">
   </head>
   <body>
     <div id="app"></div>
