--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- 删除苹果工具栏等 -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>vue动漫社</title>
-    <link rel="stylesheet" type="text/css" href="static/css/iconfont.css">
+    <link rel="stylesheet" type="text/css" href="static/css/iconfontx.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
